--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ url: ''
 twitter_username: jekyllrb
 github_username: jekyll
 markdown: kramdown
-theme: jekyll-theme-midnight
+theme: jekyll-theme-minimal
 gems:
 - jekyll-feed
 exclude:
